# mitra

./: .gitignore  requirements.txt
agri_robot_ws/arduino/agri_robot_controller/: agri_robot_controller.ino
agri_robot_ws/src/agri_robot/: CMakeLists.txt  package.xml
agri_robot_ws/src/agri_robot/config/: params.yaml
agri_robot_ws/src/agri_robot/launch/: agri_robot.launch
agri_robot_ws/src/agri_robot/src/: arduino_bridge_node.py  detection_node.py  navigation_node.py  weed_action_node.py
agri_robot_ws/src/agri_robot/urdf/: robot.urdf
config/: settings.py
web/: app.py
web/static/css/: style.css
web/static/js/: script.js
web/templates/: capture_page.html  history.html  index.html
