<?xml version="1.0"?>
<package format="2">
  <name>agri_robot</name>
  <version>0.1.0</version>
  <description>Agricultural robot for weed detection and control</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-serial</exec_depend>

</package>